fix blogpost image so it doesn't get cropped in small screens

--- a/less/blog.less
+++ b/less/blog.less
@@ -19,7 +19,7 @@
 	@media @tablet {
 		margin-left: 0;
 		width: 100%;
-	}	
+	}
 }
 
 .blog-breadcrumb {
@@ -447,14 +447,11 @@
 
 		.image-link {
 			background-repeat: no-repeat;
-			background-size: cover;
+			background-size: contain;
 			background-position: center;
 			display: block;
-			height: 400px;
-
-			@media @mobile {
-				height: 200px;
-			}
+			height: 0;
+			padding-bottom: 53%;
 		}
 
 		.image {
